@@ -1,3 +1,7 @@
+11/03/2018
+- we no longer verify the issuer field of the discovery document points
+  to a parent URI of the discovery document's location; see #219
+
 10/19/2018
 - release 1.7.0
 
